# TribeTogether

./: .gitignore  Build-Client.lua  Build-Server.lua  CMakeLists.txt  LICENSE  Main.cpp  README.md
TribeTogether-Client/: Build-TribeTogether-Client.lua  CMakeLists.txt  imgui.ini
TribeTogether-Client/Assets/Models/: untitled.fbx
TribeTogether-Client/Assets/Shaders/: basic.frag.glsl  basic.vert.glsl
TribeTogether-Client/Source/: ClientLayer.cpp  ClientLayer.h  TribeTogetherApp.cpp
TribeTogether-Client/Source/Renderer/: ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Vulkan.h
TribeTogether-Client/Source/Renderer/utils/: Vulkan.cpp  Vulkan.h
TribeTogether-Common/: Build-TribeTogether-Common-Headless.lua  Build-TribeTogether-Common.lua  CMakeLists.txt
TribeTogether-Server/: Build-TribeTogether-Server-Headless.lua  CMakeLists.txt
TribeTogether-Server/Source/: CubedApp.cpp  ServerLayer.cpp  ServerLayer.h  TribeTogetherApp.cpp
assets/shaders/: basic.frag.glsl  basic.vert.glsl
client/: CMakeLists.txt
client/assets/models/static/: untitled.ply
client/assets/shaders/: Compile.bat  basic.frag.glsl  basic.vert.glsl
client/src/: Main.cpp  VulkanApp.cpp
client/src/entities/: Component.cpp  Component.h  Entity.cpp  Entity.h
client/src/entities/components/: ControlComponents.cpp  ControlComponents.h  EntityComponents.cpp  EntityComponents.h  RenderingComponents.cpp  RenderingComponents.h
client/src/input/: Input.cpp  Input.h
client/src/network/: Network.cpp  Network.h
client/src/renderer/: Model.cpp  Model.h  Renderer.cpp  Renderer.h
client/src/renderer/utils/: happly.h
client/src/world/: World.cpp  World.h
common/: CMakeLists.txt
common/src/: Packet.cpp  Packet.h  Protocol.h  Socket.cpp  Socket.h
scripts/: Build.sh  Setup.sh
server/: CMakeLists.txt
server/src/: Main.cpp
src/: Main.cpp  VulkanApp.cpp  VulkanApp.h
src/input/: Input.cpp
